Sun May  2 15:04:38 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstdial.c: minor bug fix.

Fri Apr  9 11:48:27 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkdialog.c (call_gtk_window_activate_key): work around
	beast relying on _gtk_window_activate_key() which isn't exported by
	Gtk+-2.4 anymore.

Fri Apr  9 10:18:02 2004  Tim Janik  <timj@gtk.org>

	* docs/site-links-synthesis.texi: link updates.

Fri Apr  9 09:55:22 2004  Tim Janik  <timj@gtk.org>

	* docs/site-development.texi: added links for en_CA and en_GB.
	fixed link for sr@@Latn to point to sr stats.

2004-04-08  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

Sat Apr  3 16:40:12 2004  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

Sat Mar 27 03:34:23 2004  Tim Janik  <timj@gtk.org>

	* docs/site-download.texi: update SuSE version of RPMS.

Sat Mar  6 15:32:21 2004  Tim Janik  <timj@gtk.org>

	* released 0.6.1, binary age 0, interface age 0.

Sat Mar  6 13:50:42 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstpreferences.c: load fallback keytable if ~/.beast
	contains none.

	* library/keys/keyrc.us: added US keymap.

Sat Mar  6 13:08:18 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/dialogs/gadgets-beast.xml: move piano roll toolbar onto the
	piano roll notebook page. provide notebook page labels.

Sat Mar  6 12:15:06 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstapp.c: removed device monitor. added wave file control
	entry to playback controls.

	* beast-gtk/dialogs/gadgets-beast.xml: provide a non-expanding hbox for
	project playback controls.

	* beast-gtk/bstpatternctrl.c: added missing gxk_param_destroy() calls.

Fri Mar  5 19:08:45 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstrecords.idl: added NoteLength choice enumeration.

	* beast-gtk/bstpartdialog.c: added vraster combo box.

	* beast-gtk/bstpatternctrl.[hc]: added vraster parameter to adjust
	the vertical per-line ticks in the pattern editor display. implemented