@@ -1,3 +1,9 @@
+Sun May  2 19:59:39 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstmain.c: support --print-dir=prefix option.
+
+	* data/Makefile.am: provide BST_PATH_PREFIX in config-paths.h.
+
 Sun May  2 15:04:38 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstdial.c: minor bug fix.
